# FinQuanta

./: .dockerignore  .env.api.example  .env.api.production.example  .gitattributes  .gitignore  README.md  accept_windows_release.bat  app.py  backtester.py  build_installer.py  build_windows_release.bat  check_api.bat  check_portfolio.py  check_runtime_dependencies.bat  check_trade_channel_safety.bat  check_windows_release_ready.bat  config.py  create_desktop_shortcut.ps1  data_fetcher.py  e2e_openclaw_unattended.bat  fundamental.py  hidden_task_launcher.vbs  init_portfolio.py  install_api_task.bat  install_api_windows_service.bat  install_daemon_task.bat  install_openclaw_task.bat  install_scheduler.bat  main.py  migrate_import.bat  monte_carlo.py  param_optimizer.py  portfolio.py  pyproject.toml  pytest.ini  replay_openclaw_guard.bat  replay_openclaw_history.bat  report.py  requirements.txt  risk_manager.py  (+26 more)
.streamlit/: config.toml
api_server/: Dockerfile  assistant_service.py  auth.py  cache_provider.py  config.py  env_loader.py  main.py  schemas.py  settings_service.py  storage.py
core/: __init__.py
deploy/: docker-compose.yml  nginx.conf
desktop/: agents.py  ai_portfolio.py  ai_trader.py  assistant_actions.py  assistant_audit.py  assistant_intents.py  assistant_permissions.py  auto_scheduler.py  auto_sell.py  backtest_service.py  broker_gateway.py  custom_portfolio.py  daemon_scheduler.py  data_access.py  data_sync.py  db.py  domain_models.py  event_strategy.py  factor_research.py  fund_strategy.py  label_engine.py  local_backtest.py  main_window.py  (+24 more)
(+310 files in other folders)
