[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finquanta"
version = "0.1.0"
description = "AI-assisted quantitative trading desktop, API, and operations toolkit."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["api_server*", "core*", "desktop*", "infrastructure*", "services*"]
namespaces = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"pages/*.py" = ["E402"]
"infra/*.py" = ["E402"]
"scripts/*.py" = ["E402"]
"tests/*.py" = ["E402"]
"tests/**/*.py" = ["E402"]
